feat: some enhancements
